tests/baselines/reference/unterminatedRegexAtEndOfSource1.errors.txt
==== tests/cases/compiler/unterminatedRegexAtEndOfSource1.ts (2 errors) ====
    var a = /
            ~
!!! error TS1109: Expression expected.
             
!!! error TS1109: Expression expected.